--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.19.0"
+        "@symfony/webpack-encore": "^0.20.1",
+        "bootstrap-sass": "^3.3.7",
+        "jquery": "^3.3.1",
+        "node-sass": "^4.9.0",
+        "sass-loader": "^7.0.1"
     },
     "license": "UNLICENSED",
     "private": true,
