--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,5 +1,6 @@
 framework:
     secret: '%env(APP_SECRET)%'
+    translator: { fallbacks: [ "fr" ] }
     #default_locale: en
     #csrf_protection: true
     #http_method_override: true
