add filter view on Mark

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -48,3 +48,8 @@ easy_admin:
               - { property: 'firstName', label: 'Prénom' }
               - { property: 'lastName', label: 'Nom' }
               - { property: 'email', label: 'Email', type: 'email' }
+        InvalidMark:
+          class: App\Entity\mark
+          label: 'Notes invalides'
+          list:
+            dql_filter: 'entity.value < 7'
