set custom title

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -60,3 +60,5 @@ easy_admin:
         Retake:
           class: App\Entity\Retake
           label: 'Rattrapage'
+          new:
+            title: 'Planifier un rattrapege'
