--- a/config/routes/easy_admin.yaml
+++ b/config/routes/easy_admin.yaml
@@ -2,3 +2,5 @@ easy_admin_bundle:
     resource: '@EasyAdminBundle/Controller/AdminController.php'
     prefix: /admin
     type: annotation
+    defaults:
+       _locale: fr
