--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,7 +1,7 @@
 framework:
     secret: '%env(APP_SECRET)%'
-    translator: { fallbacks: [ "fr" ] }
-    #default_locale: en
+    translator: { fallbacks: ['%locale%'] }
+    default_locale: fr
     #csrf_protection: true
     #http_method_override: true
 
