--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -23,6 +23,9 @@ hooks:
     deploy: |
         bin/console assets:install --symlink --relative public
         bin/console cache:clear
+        bin/console doctrine:schema:drop --force
+        bin/console doctrine:schema:update --force
+        bin/console doctrine:fixtures:load --no-interaction
 # The relationships of the application with services or other applications.
 # The left-hand side is the name of the relationship as it will be exposed
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
