--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -30,8 +30,8 @@ hooks:
 # The left-hand side is the name of the relationship as it will be exposed
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
 # side is in the form `<service name>:<endpoint name>`.
-#relationships:
-#    database: "mysqldb:mysql"
+relationships:
+    database: "mysqldb:mysql"
 
 # The size of the persistent disk of the application (in MB).
 disk: 2048
