--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,19 +1,17 @@
-# This file describes an application. You can have multiple applications
-# in the same project.
-
-# The name of this app. Must be unique within a project.
 name: app
 
-# The type of the application to build.
 type: php:7.2
 build:
     flavor: composer
 
 variables:
     env:
-        # Tell Symfony to always install in production-mode.
         APP_ENV: 'prod'
         APP_DEBUG: 0
+
+dependencies:
+    nodejs:
+        yarn: "*"
 
 # The hooks that will be performed when the package is deployed.
 hooks:
@@ -26,12 +24,8 @@ hooks:
         bin/console doctrine:schema:drop --force
         bin/console doctrine:schema:update --force
         bin/console doctrine:fixtures:load --no-interaction
-# The relationships of the application with services or other applications.
-# The left-hand side is the name of the relationship as it will be exposed
-# to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
-# side is in the form `<service name>:<endpoint name>`.
-relationships:
-    database: "mysqldb:mysql"
+        yarn install run encore production
+
 
 # The size of the persistent disk of the application (in MB).
 disk: 2048
