--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -6,8 +6,8 @@ build:
 
 variables:
     env:
-        APP_ENV: 'prod'
-        APP_DEBUG: 0
+        APP_ENV: 'dev'
+        APP_DEBUG: 1
 
 dependencies:
     nodejs:
