Revert "set dev env"
This reverts commit 4c0b927

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -6,8 +6,8 @@ build:
 
 variables:
     env:
-        APP_ENV: 'dev'
-        APP_DEBUG: 1
+        APP_ENV: 'prod'
+        APP_DEBUG: 0
 
 dependencies:
     nodejs:
