--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -9,6 +9,9 @@ variables:
         APP_ENV: 'prod'
         APP_DEBUG: 0
 
+relationships:
+    database: "mysqldb:mysql"
+
 dependencies:
     nodejs:
         yarn: "*"
