--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -19,14 +19,18 @@ dependencies:
 # The hooks that will be performed when the package is deployed.
 hooks:
     build: |
-        bin/console assets:install --no-debug
-        bin/console cache:clear
-        bin/console assets:install --symlink --relative public
-        bin/console cache:clear
-        bin/console doctrine:schema:drop --force
-        bin/console doctrine:schema:update --force
-        bin/console doctrine:fixtures:load --no-interaction
+        rm -rf var/cache/*
+        php bin/console assets:install --no-debug
+        php bin/console cache:clear
+        php bin/console assets:install --symlink --relative public
+        php bin/console cache:clear
+        php bin/console doctrine:schema:drop --force
+        php bin/console doctrine:schema:update --force
+        yarn
+        yarn run encore production
     deploy: |
+        rm -rf var/cache/*
+        php bin/console doctrine:fixtures:load --no-interaction
 
 
 # The size of the persistent disk of the application (in MB).
