--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "symfony/webpack-encore-pack": "*",
         "symfony/yaml": "^4.0",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "ext-sqlite3": "*"
+        "ext-pdo_sqlite": "*"
     },
     "require-dev": {
         "symfony/browser-kit": "^4.0",
