--- a/config/packages/prod/doctrine.yaml
+++ b/config/packages/prod/doctrine.yaml
@@ -1,7 +1,7 @@
 doctrine:
     dbal:
         # configure these for your database server
-        driver: 'pdo_sqlite'
+        driver: 'pdo_pgsql'
         charset: utf8mb4
         default_table_options:
             charset: utf8mb4
