add heroku post deploy scripts

--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,11 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "compile": [
+            "php bin/console doctrine:schema:drop --force",
+            "php bin/console doctrine:schema:update --force",
+            "php bin/console doctrine:fixtures:load --no-interaction"
         ]
     },
     "conflict": {
