--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production"
+        "build": "encore production",
+        "heroku-postbuild": "build."
     }
 }
