--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production",
-        "heroku-postbuild": "build"
+        "heroku-postbuild": "encore production"
     }
 }
