set to amazon SES

--- a/.env.dist
+++ b/.env.dist
@@ -13,7 +13,7 @@ APP_SECRET=1da60c1a04d52449d7c963e9c8b2fb77
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=smtp://email-smtp.eu-west-1.amazonaws.com:587?encryption=tls&username=AKIAJBFZHLYQLNRHLE5A&password=AjAEoq3BcyNmux9nHwhbwNR56IxnjWcV4V7mhT5tShkr
 ###< symfony/swiftmailer-bundle ###
 
 ###> doctrine/doctrine-bundle ###
